[NNO-12742] - Добавление clear-on-blur всем полям с маской